--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,28 @@
 <html>
 <head>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
+ 
+<meta charset="UTF-8">
 
 </head>
 <body>
-<h1>Testing</h1>
+<h1>Style-Hub</h1>
+<div id="styleTable"></div>
+
+<script>
+    var url = 'style-dir/_list_.json';
+    var j = [];
+    $.ajax({
+        type: 'GET',
+        url: url,
+        dataType: 'json',
+        success: function(data) { j = data;},
+        async: false
+    });
+
+    alert(j.Style.Name);
+</script>
 
 
 </body>
