--- a/index.htm
+++ b/index.htm
@@ -1,29 +1,86 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
- 
-<meta charset="UTF-8">
+    <meta charset="utf8">
+    <title>Read data from External JSON file using JavaScript</title>
 
+    <style>
+        * { font:17px 'Segoe UI'; }
+        table, th, td {
+            border: solid 1px #ddd;
+            border-collapse: collapse;
+            padding: 2px 3px;
+            text-align: center;
+        }
+        th {
+            font-weight:bold;
+        }
+    </style>
 </head>
 <body>
-<h1>Style-Hub</h1>
-<div id="styleTable"></div>
+    <h3>
+    	Data extracted from External JSON file and converted to an HTML table
+    </h3>
+    <div id='showTable'></div>
+</body>
 
 <script>
-    var url = 'style-dir/_list_.json';
-    var j = [];
-    $.ajax({
-        type: 'GET',
-        url: url,
-        dataType: 'json',
-        success: function(data) { j = data;},
-        async: false
-    });
+    // Create XMLHttpRequest object.
+    var oXHR = new XMLHttpRequest();
 
-    alert(j.style[0].name);
+    // Initiate request.
+    oXHR.onreadystatechange = reportStatus;
+    oXHR.open("GET", "style-dir/_list_.json", true);  // get json file.
+    oXHR.send();
+
+    function reportStatus() {
+        if (oXHR.readyState == 4) {		// Check if request is complete.
+
+            // Create an HTML table using response from server.
+            createTableFromJSON(this.responseText);
+        }
+    }
+
+    // Create an HTML table using the JSON data.
+    function createTableFromJSON(jsonData) {
+        var arrBirds = [];
+        arrBirds = JSON.parse(jsonData); 	// Convert JSON to array.
+
+        var col = [];
+        for (var i = 0; i < arrBirds.length; i++) {
+            for (var key in arrBirds[i]) {
+                if (col.indexOf(key) === -1) {
+                    col.push(key);
+                }
+            }
+        }
+
+        // Create a dynamic table.
+        var table = document.createElement("table")     // Create table header.
+
+        var tr = table.insertRow(-1);                   // Table row.
+
+        for (var i = 0; i < col.length; i++) {
+            var th = document.createElement("th");      // Table header.
+            th.innerHTML = col[i];
+            tr.appendChild(th);
+        }
+
+        // Add JSON to the table rows.
+        for (var i = 0; i < arrBirds.length; i++) {
+
+            tr = table.insertRow(-1);
+
+            for (var j = 0; j < col.length; j++) {
+                var tabCell = tr.insertCell(-1);
+                tabCell.innerHTML = arrBirds[i][col[j]];
+            }
+        }
+
+        // Finally, add the dynamic table to a container.
+        var divContainer = document.getElementById("showTable");
+        divContainer.innerHTML = "";
+        divContainer.appendChild(table);
+    };
 </script>
-
-
-</body>
 </html>
