--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h3>
-    	Data extracted from External JSON file and converted to an HTML table
+    	Data extracted from External JSON file and converted to an HTML table.
     </h3>
     <div id='showTable'></div>
 </body>
