--- a/index.htm
+++ b/index.htm
@@ -51,6 +51,7 @@
                 <ul class="list-unstyled">
                   <li><a href="https://twitter.com/klaskarlsson" class="text-white">Follow on Twitter</a></li>
                   <li><a href="mailto:klas.karlsson@geosupportsystem.se" class="text-white">Email maintainer</a></li>
+                  <li><a href="https://github.com/style-hub/style-hub.github.io" class="text-white">Fork on GitHub</a></li>
                 </ul>
               </div>
             </div>
@@ -59,7 +60,7 @@
         <div class="navbar navbar-dark bg-dark shadow-sm">
           <div class="container d-flex justify-content-between">
             <a href="#" class="navbar-brand d-flex align-items-center">
-                <strong>Style-Hub</strong>
+                <strong>QGIS Style-Hub</strong>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
