--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@
         <section class="jumbotron text-center">
           <div class="container">
             <h1>Style Hub</h1>
-            <p class="lead text-muted">Collection of free to use QGIS style xml-files to download and import.<br>To copy the url, rightclick the style url button and copy the link.</p>
+            <p class="lead text-muted">Collection of free to use QGIS style xml-files to download and import.<br>To copy the url, click the copy button, then paste the link in QGIS style manager.</p>
             
           </div>
         </section>
@@ -109,7 +109,7 @@
                 <p class="card-text">This collection of styles are all more or less random in their appearance.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/random.xml" role="button">Style Url</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/random.xml" role="button">XML</a>
                     <button class="btn btn-sm btn-outline-secondary" onclick="updateClipboard('https://style-hub.github.io/style-dir/random.xml')">Copy</button>
                   </div>
                   <small class="text-muted">Klas Karlsson</small>
@@ -126,7 +126,7 @@
                 <p class="card-text">This is a style package with five simple styles that could be suitable in a map with a Cartoon style.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/cartoon.xml" role="button">Style Url</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/cartoon.xml" role="button">XML</a>
                     <button class="btn btn-sm btn-outline-secondary" onclick="updateClipboard('https://style-hub.github.io/style-dir/cartoon.xml')">Copy</button>
                   </div>
                   <small class="text-muted">Klas Karlsson</small>
@@ -144,7 +144,7 @@
                 <p class="card-text">This is a style contains two styles. One metric and one imperial. It will only work for projected data [m/ft].</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/construction.xml" role="button">Style Url</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/construction.xml" role="button">XML</a>
                     <button class="btn btn-sm btn-outline-secondary" onclick="updateClipboard('https://style-hub.github.io/style-dir/construction.xml')">Copy</button>
                   </div>
                   <small class="text-muted">Klas Karlsson</small>
@@ -161,7 +161,7 @@
                 <p class="card-text">This is a style set with highly modifiable patterns. Change color, size, etc.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/pattern.xml" role="button">Style Url</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/pattern.xml" role="button">XML</a>
                     <button class="btn btn-sm btn-outline-secondary" onclick="updateClipboard('https://style-hub.github.io/style-dir/pattern.xml')">Copy</button>
                   </div>
                   <small class="text-muted">Klas Karlsson</small>
