Adding card headers

--- a/index.htm
+++ b/index.htm
@@ -85,6 +85,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
+            <div class="card-header">Fun</div>
             <a href="style-dir/fun.png">
                 <img class="img-fluid" alt="Responsive image" src="style-dir/fun.png">
             </a>
@@ -102,8 +103,9 @@
         </div>
         <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-                <a href="style-dir/random.png">  
-              <img class="img-fluid" alt="Responsive image" src="style-dir/random.png">
+              <div class="card-header">Random</div>
+              <a href="style-dir/random.png">  
+                <img class="img-fluid" alt="Responsive image" src="style-dir/random.png">
               </a>
               <div class="card-body">
                 <p class="card-text">This collection of styles are all more or less random in their appearance.</p>
@@ -119,9 +121,10 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-                <a href="style-dir/cartoon.png">
+              <div class="card-header">Cartoon</div>
+              <a href="style-dir/cartoon.png">
                 <img class="img-fluid" alt="Responsive image" src="style-dir/cartoon.png">
-                </a>    
+              </a>    
               <div class="card-body">
                 <p class="card-text">This is a style package with five simple styles that could be suitable in a map with a Cartoon style.</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -137,9 +140,10 @@
 
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-                <a href="style-dir/construction.png">
+              <div class="card-header">Construction</div>
+              <a href="style-dir/construction.png">
                 <img class="img-fluid" alt="Responsive image" src="style-dir/construction.png">
-                </a>    
+              </a>    
               <div class="card-body">
                 <p class="card-text">This is a style contains two styles. One metric and one imperial. It will only work for projected data [m/ft].</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -154,9 +158,10 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-                <a href="style-dir/pattern.png">
+              <div class="card-header">Pattern</div>
+              <a href="style-dir/pattern.png">
                 <img class="img-fluid" alt="Responsive image" src="style-dir/pattern.png">
-                </a>    
+              </a>    
               <div class="card-body">
                 <p class="card-text">This is a style set with highly modifiable patterns. Change color, size, etc.</p>
                 <div class="d-flex justify-content-between align-items-center">
