--- a/index.htm
+++ b/index.htm
@@ -145,7 +145,7 @@
                 <img class="img-fluid" alt="Responsive image" src="style-dir/construction.png">
               </a>    
               <div class="card-body">
-                <p class="card-text">This is a style contains two styles. One metric and one imperial. It will only work for projected data [m/ft].</p>
+                <p class="card-text">This style contains two style options. One metric and one imperial. It will only work for projected data [m/ft].</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a class="btn btn-sm btn-outline-secondary" href="style-dir/construction.xml" role="button">XML</a>
