Added NMK and LegendPatches

--- a/index.htm
+++ b/index.htm
@@ -167,6 +167,42 @@
             </div>
           </div>
 
+          <!-- NMK by Klas Karlsson -->
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-header">NMK</div>
+              <div class="card-body">
+                <button type="button" class="btn" data-toggle="modal" data-target="#modal" data-whatever="nmk"><img class="img-fluid" alt="Responsive image" src="style-dir/nmk.png"></button>
+                <p class="card-text">Large collection of styles for topographic maps. Initially created for Swedish National Landsurvey Open Data. [SWEDISH NAMES]</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/nmk.xml" role="button">XML</a>
+                    <button class="btn btn-sm btn-outline-secondary" onclick="updateClipboard('https://style-hub.github.io/style-dir/nmk.xml')">Copy</button>
+                  </div>
+                  <small class="text-muted">Klas Karlsson</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- LegendPatches by Klas Karlsson -->
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-header">Legend Patches</div>
+              <div class="card-body">
+                <button type="button" class="btn" data-toggle="modal" data-target="#modal" data-whatever="LegendPatches"><img class="img-fluid" alt="Responsive image" src="style-dir/LegendPatches.png"></button>
+                <p class="card-text">Patches to use with your layout legends.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a class="btn btn-sm btn-outline-secondary" href="style-dir/LegendPatches.xml" role="button">XML</a>
+                    <button class="btn btn-sm btn-outline-secondary" onclick="updateClipboard('https://style-hub.github.io/style-dir/LegendPatches.xml')">Copy</button>
+                  </div>
+                  <small class="text-muted">Klas Karlsson</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- Additional styles here... -->
 
 
