--- a/index.htm
+++ b/index.htm
@@ -67,7 +67,7 @@
             <p class="lead text-muted">Collections of free to use QGIS style xml-files to download and import. 
               To use the url, click the copy button, then paste the url in QGIS style manager import dialogue.
             </p>
-              <p class="lead text-muted">This is only a static example. More development is on GitHub, and a "dynamic" test site is at a <a href="http://qgis-hub.rf.gd">Test Site</a>.</p>
+              <p class="lead text-muted">This is only a static example. More development is on GitHub, and a "dynamic" test site is at a <a href="http://qgis-hub.fast-page.org">Test Site</a>.</p>
             
           </div>
         </section>
